--- a/Actividad2.ipynb
+++ b/Actividad2.ipynb
@@ -121,11 +121,11 @@
       "metadata": {
         "id": "ThRENoylsWou",
         "colab_type": "code",
+        "outputId": "0a812cb8-c3bb-461c-f96b-e022111b022f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 520
-        },
-        "outputId": "0a812cb8-c3bb-461c-f96b-e022111b022f"
+        }
       },
       "source": [
         "from sklearn.model_selection import train_test_split\n",
@@ -169,7 +169,7 @@
         "plt.title(\"MAE values over different test size\")\n",
         "plt.show()"
       ],
-      "execution_count": 30,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -226,11 +226,11 @@
       "metadata": {
         "id": "ZwfeHQvGsWo0",
         "colab_type": "code",
+        "outputId": "8e124dae-e67c-4d5e-ba9d-a547cbb81aec",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 554
-        },
-        "outputId": "8e124dae-e67c-4d5e-ba9d-a547cbb81aec"
+        }
       },
       "source": [
         "from sklearn.model_selection import train_test_split\n",
@@ -274,7 +274,7 @@
         "plt.title(\"Accuracy values over different test size\")\n",
         "plt.show()"
       ],
-      "execution_count": 32,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -339,13 +339,70 @@
       "metadata": {
         "id": "vHfcvzUfsWo4",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 256
+        },
+        "outputId": "0ba3756c-4747-4ae2-e344-a13a55286a35"
       },
       "source": [
-        ""
+        "import numpy as np\n",
+        "from math import sqrt\n",
+        "from pprint import pprint\n",
+        "from sklearn import datasets\n",
+        "from sklearn.dummy import DummyRegressor\n",
+        "from sklearn.model_selection import cross_validate\n",
+        "from sklearn.model_selection import KFold\n",
+        "from sklearn.metrics import make_scorer\n",
+        "from sklearn.metrics import mean_squared_error\n",
+        "# Carga de datos.\n",
+        "datos = datasets.load_boston()\n",
+        "datasets = []\n",
+        "# Algoritmo de aprendizaje.\n",
+        "reg = DummyRegressor()\n",
+        "modelos = []\n",
+        "\n",
+        "# Métricas de evaluación.\n",
+        "metricas = {\n",
+        "    'MAE': 'neg_mean_absolute_error',\n",
+        "    'RMSE': make_scorer(\n",
+        "                lambda y, y_pred: sqrt(mean_squared_error(y, y_pred)),\n",
+        "                greater_is_better=False),\n",
+        "    'MAPE': make_scorer(\n",
+        "                lambda y, y_pred: np.mean(np.abs((y - y_pred) / y)) * 100,\n",
+        "                greater_is_better=False)\n",
+        "}\n",
+        "# Vector de resultados\n",
+        "resultados = []\n",
+        "\n",
+        "# Validación y evaluación del modelo.\n",
+        "evaluacion = cross_validate(reg, datos.data, datos.target, \n",
+        "                            cv = KFold(n_splits=10), scoring = metricas)\n",
+        "# Presentación de los resultados de la evaluación.\n",
+        "pprint(evaluacion)"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "{'fit_time': array([0.00036335, 0.00020838, 0.00043631, 0.00017428, 0.00026369,\n",
+            "       0.00019431, 0.00018764, 0.00027251, 0.00024915, 0.00023007]),\n",
+            " 'score_time': array([0.00160551, 0.0004878 , 0.00062084, 0.00040174, 0.00043106,\n",
+            "       0.00056791, 0.00040793, 0.00062084, 0.0005877 , 0.00040603]),\n",
+            " 'test_MAE': array([ -5.3515794 ,  -3.53014437,  -4.94711485, -10.76168067,\n",
+            "        -6.44039647, -10.047688  ,  -3.17389474, -11.29252632,\n",
+            "       -10.23408772,  -4.63788596]),\n",
+            " 'test_MAPE': array([-29.25050459, -12.906196  , -30.39854529, -30.34584199,\n",
+            "       -18.56158501, -27.26756887, -14.90917649, -98.89347189,\n",
+            "       -90.94044655, -33.26160748]),\n",
+            " 'test_RMSE': array([ -6.32943878,  -5.54863948,  -5.6114705 , -13.84505712,\n",
+            "       -10.19621426, -13.13853419,  -4.07150292, -13.4561593 ,\n",
+            "       -10.80909628,  -5.99400813])}\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
